--- a/ivy.xml
+++ b/ivy.xml
@@ -7,12 +7,15 @@
 
 	<publications>
 		<artifact name="fmk-schema" ext="zip" />
+		<artifact name="NamespaceOracle-generated" ext="properties" />
 	</publications>    
 
 	<dependencies>
-	<dependency org="commons-io" name="commons-io" rev="1.4" />
-	<dependency org="dk.sosi.seal" name="seal" rev="2.1.1">
-		<exclude org="axis" />
-	</dependency>
+		<dependency org="commons-io" name="commons-io" rev="1.4" />
+		<dependency org="dk.sosi.seal" name="seal" rev="2.1.1">
+			<exclude org="axis" />
+		</dependency>
+		<dependency org="com.trifork" name="xmlobject" rev="1.12"/>
+		<dependency org="xerces" name="xercesImpl" rev="2.9.1"/>
 	</dependencies>
 </ivy-module>
