--- a/ivy.xml
+++ b/ivy.xml
@@ -3,6 +3,7 @@
 	<info module="medicinkortet-schema" organisation="trifork" status="integration"/>
 	<configurations>
 		<conf name="build" />
+		<conf name="deploy" />
 	</configurations>
 
 	<publications>
