fedtet lidt med byggefilen for at få jenkins til at publisere builds

--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,7 @@
 
 	<property name="ivy.checksums" value=""/>
 	
+	<property file="build.properties"/>
 	<property name="trifork-common" value="${basedir}/../trifork-common"/>
 	<import file="${trifork-common}/etc/build-common.xml"/>
     
