--- a/ivy.xml
+++ b/ivy.xml
@@ -1,6 +1,6 @@
 <ivy-module version="1.0">
 	<!-- ivy beskrivelse: http://www.jaya.free.fr/ivy/doc/ivyfile/ -->
-	<info module="medicinkortet-schema" organisation="trifork" status="integration"/>
+	<info module="fmk-schema" organisation="com.trifork" status="integration"/>
 	<configurations>
 		<conf name="build" />
 		<conf name="deploy" />
