Udvidet kode + build.xml, så der genereres zip-filer m. orig. WSDL+XSD

--- a/build.xml
+++ b/build.xml
@@ -47,6 +47,8 @@
             <sysproperty key="VersionDate" value="2012_06_01"/>
             <sysproperty key="WsdlName" value="MedicineCard"/>
         </java>
+		<zip destfile="target/wsdl/MedicineCard_2012_06_01-collection.zip" basedir="target/wsdl/MedicineCard_2012_06_01"/>
+
 		<java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
 			<classpath>
 				<path location="${build.dir}"/>
@@ -55,6 +57,8 @@
 			<sysproperty key="VersionDate" value="2012_01_01"/>
             <sysproperty key="WsdlName" value="MedicineCard"/>
 		</java>
+		<zip destfile="target/wsdl/MedicineCard_2012_01_01-collection.zip" basedir="target/wsdl/MedicineCard_2012_01_01"/>
+
 		<java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
 			<classpath>
 				<path location="${build.dir}"/>
@@ -63,6 +67,8 @@
 			<sysproperty key="VersionDate" value="2011_01_01"/>
             <sysproperty key="WsdlName" value="MedicineCard"/>
 		</java>
+		<zip destfile="target/wsdl/MedicineCard_2011_01_01-collection.zip" basedir="target/wsdl/MedicineCard_2011_01_01"/>
+
 		<java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
 			<classpath>
 				<path location="${build.dir}"/>
@@ -71,6 +77,8 @@
 			<sysproperty key="VersionDate" value="2009_01_01"/>
             <sysproperty key="WsdlName" value="MedicineCard"/>
 		</java>
+		<zip destfile="target/wsdl/MedicineCard_2009_01_01-collection.zip" basedir="target/wsdl/MedicineCard_2009_01_01"/>
+
 		<copy todir="target">
 			<fileset dir="target/gensrc/META-INF" includes="schemas/**"/>
 		</copy>
