Tilskud, bug in wsdl and adding to build reimbursement target to build file

--- a/build.xml
+++ b/build.xml
@@ -35,7 +35,7 @@
     <target name="generate-namespace-oracle" depends="compile">
         <java classpathref="classpath" failonerror="true"
         	classname="dk.medicinkortet.notproduktion.namespaceoracle.NamespaceOracleGenerator"/>
-    </target>
+    </target>	
 	
 	<target name="organize-schemas" depends="compile" >
 		<mkdir dir="target/wsdl" />
@@ -48,7 +48,20 @@
 				<sysproperty key="VersionDate" value="2012_06_01"/>
 				<sysproperty key="WsdlName" value="EffectuationOrdering"/>
 			</java>
-			<zip destfile="target/wsdl/EffectuationOrdering_2012_06_01-collection.zip" 
+
+		<java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
+			<classpath>
+				<path location="${build.dir}"/>
+				<fileset dir="lib/build" excludes="*gwt*"/>
+			</classpath>
+			<sysproperty key="VersionDate" value="2012_12_01"/>
+			<sysproperty key="WsdlName" value="Reimbursement"/>
+		</java>
+		
+		<zip destfile="target/wsdl/Reimbursement_2012_12_01-collection.zip" 
+			  basedir="target/wsdl/Reimbursement_2012_12_01"/>
+
+		<zip destfile="target/wsdl/EffectuationOrdering_2012_06_01-collection.zip" 
 				  basedir="target/wsdl/EffectuationOrdering_2012_06_01"/>
 		
 		<java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
