Adderet FMK 1.2.6 only wsdl til listen over exports

--- a/build.xml
+++ b/build.xml
@@ -88,6 +88,16 @@
 				<path location="${build.dir}"/>
 				<fileset dir="lib/build" excludes="*gwt*"/>
 			</classpath>
+			<sysproperty key="VersionDate" value="2012_01_01_126Only"/>
+            <sysproperty key="WsdlName" value="MedicineCard"/>
+		</java>
+		<zip destfile="target/wsdl/MedicineCard_2012_01_01_126Only-collection.zip" basedir="target/wsdl/MedicineCard_2012_01_01"/>
+
+		<java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
+			<classpath>
+				<path location="${build.dir}"/>
+				<fileset dir="lib/build" excludes="*gwt*"/>
+			</classpath>
 			<sysproperty key="VersionDate" value="2011_01_01"/>
             <sysproperty key="WsdlName" value="MedicineCard"/>
 		</java>
