Rettet navn på wsdl således at det er muligt at lave inline WSDL. Samtidig ændret organize_schema ant target så den tager DumpRestore med

--- a/build.xml
+++ b/build.xml
@@ -62,6 +62,17 @@
 		</java>
 		<zip destfile="target/wsdl/PatientOrganisationRelation_2012_06_01-collection.zip" 
 			  basedir="target/wsdl/PatientOrganisationRelation_2012_06_01"/>
+
+		<java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
+			<classpath>
+				<path location="${build.dir}"/>
+				<fileset dir="lib/build" excludes="*gwt*"/>
+			</classpath>
+			<sysproperty key="VersionDate" value="2013_01_01"/>
+			<sysproperty key="WsdlName" value="DumpRestore"/>
+		</java>
+		<zip destfile="target/wsdl/Dumprestore_2013_01_01-collection.zip" 
+			  basedir="target/wsdl/DumpRestore_2013_01_01"/>
 		
         <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
             <classpath>
