Seal 2.1.6 - part two

--- a/ivy.xml
+++ b/ivy.xml
@@ -16,6 +16,13 @@
 		<dependency org="dk.sosi.seal" name="seal" rev="2.1.6">
 			<exclude org="axis" />
 		</dependency>
+        <dependency org="org.apache.ws.security" name="wss4j" rev="1.5.12" >
+            <exclude org="javax.servlet"/>
+        </dependency>
+        <dependency org="com.unboundid.product.scim" name="scim-ldap" rev="1.1.0" />
+        <dependency org="commons-codec" name="commons-codec" force="true" rev="1.5" />
+        <dependency org="bouncycastle" name="bcprov-jdk14" rev="138"/>
+
 		<dependency org="com.trifork" name="xmlobject" rev="1.17"/>
 		<dependency org="xerces" name="xercesImpl" rev="2.9.1"/>
 	</dependencies>
