--- a/build.xml
+++ b/build.xml
@@ -84,6 +84,16 @@
         </java>
 		<zip destfile="target/wsdl/MedicineCard_2012_06_01-collection.zip" basedir="target/wsdl/MedicineCard_2012_06_01"/>
 
+        <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
+            <classpath>
+                <path location="${build.dir}"/>
+                <fileset dir="lib/build" excludes="*gwt*"/>
+            </classpath>
+            <sysproperty key="VersionDate" value="2013_06_01"/>
+            <sysproperty key="WsdlName" value="MedicineCard"/>
+        </java>
+        <zip destfile="target/wsdl/MedicineCard_2013_06_01-collection.zip" basedir="target/wsdl/MedicineCard_2013_06_01"/>
+
 		<java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
 			<classpath>
 				<path location="${build.dir}"/>
