Ændret tilknytningsservicen til 1.4.2 og ny suspendering samt indført generisk håndtering af relationen i Medicinecard

--- a/build.xml
+++ b/build.xml
@@ -68,6 +68,17 @@
 				<path location="${build.dir}"/>
 				<fileset dir="lib/build" excludes="*gwt*"/>
 			</classpath>
+			<sysproperty key="VersionDate" value="2013_06_01"/>
+			<sysproperty key="WsdlName" value="PatientOrganisationRelation"/>
+		</java>
+		<zip destfile="target/wsdl/PatientOrganisationRelation_2013_06_01-collection.zip" 
+			  basedir="target/wsdl/PatientOrganisationRelation_2013_06_01"/>
+
+		<java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
+			<classpath>
+				<path location="${build.dir}"/>
+				<fileset dir="lib/build" excludes="*gwt*"/>
+			</classpath>
 			<sysproperty key="VersionDate" value="2013_01_01"/>
 			<sysproperty key="WsdlName" value="DumpRestore"/>
 		</java>
