Tilføjet byg af EffectuationOrdering_2013_pem-collection.zip (schema+wsdl) til ant target organize-schemas

--- a/build.xml
+++ b/build.xml
@@ -62,7 +62,18 @@
 		<zip destfile="target/wsdl/EffectuationOrdering_2013_06_01-collection.zip" 
 				  basedir="target/wsdl/EffectuationOrdering_2013_06_01"/>
 
-		<java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
+        <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
+            <classpath>
+                <path location="${build.dir}"/>
+                <fileset dir="lib/build" excludes="*gwt*"/>
+            </classpath>
+            <sysproperty key="VersionDate" value="2013_pem"/>
+            <sysproperty key="WsdlName" value="EffectuationOrdering"/>
+        </java>
+        <zip destfile="target/wsdl/EffectuationOrdering_2013_pem-collection.zip"
+             basedir="target/wsdl/EffectuationOrdering_2013_pem"/>
+
+        <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
 			<classpath>
 				<path location="${build.dir}"/>
 				<fileset dir="lib/build" excludes="*gwt*"/>
