Altered module name to avoid conflicts with version on master branch when publishing to ivy repo

--- a/ivy.xml
+++ b/ivy.xml
@@ -1,6 +1,6 @@
 <ivy-module version="1.0">
 	<!-- ivy beskrivelse: http://www.jaya.free.fr/ivy/doc/ivyfile/ -->
-	<info module="fmk-schema" organisation="com.trifork" status="integration"/>
+	<info module="fmk-schema_idws" organisation="com.trifork" status="integration"/>
 	<configurations>
 		<conf name="build" />
 		<conf name="deploy" />
