Build the new idws inlined wsdl when running ant

--- a/build.xml
+++ b/build.xml
@@ -121,6 +121,16 @@
                 <path location="${build.dir}"/>
                 <fileset dir="lib/build" excludes="*gwt*"/>
             </classpath>
+            <sysproperty key="VersionDate" value="Idws_2012_06_01"/>
+            <sysproperty key="WsdlName" value="MedicineCard"/>
+        </java>
+		<zip destfile="target/wsdl/MedicineCard_Idws_2012_06_01-collection.zip" basedir="target/wsdl/MedicineCard_Idws_2012_06_01"/>
+
+        <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m">
+            <classpath>
+                <path location="${build.dir}"/>
+                <fileset dir="lib/build" excludes="*gwt*"/>
+            </classpath>
             <sysproperty key="VersionDate" value="2013_06_01"/>
             <sysproperty key="WsdlName" value="MedicineCard"/>
         </java>
