Update fmk-schemas to be able to build two artifacts - one containing the idws XML schema files and another containing the specialized schemas used by FMK

--- a/ivy.xml
+++ b/ivy.xml
@@ -8,6 +8,7 @@
 
 	<publications>
 		<artifact name="fmk-schema" ext="zip" />
+		<artifact name="fmk-schema-idws" ext="zip" />
 		<artifact name="NamespaceOracle-generated" ext="properties" />
 	</publications>    
 
