Fix extension on fmk-schema-source archive so it matches the artifact configured in ivy

--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
     <property name="target.dir" value="${basedir}/target" />
 
     <property name="fmk-classes.target.jar" value="${target.dir}/fmk-schema-classes.jar" />
-    <property name="fmk-sources.target.zip" value="${target.dir}/fmk-schema-source.jar" />
+    <property name="fmk-sources.target.zip" value="${target.dir}/fmk-schema-source.zip" />
 
     <property name="idws.target.dir" value="${target.dir}/idws/target" />
     <property name="idws.work.dir" value="${target.dir}/idws/workdir" />
