--- a/ivy.xml
+++ b/ivy.xml
@@ -8,7 +8,7 @@
 		<conf name="src" />
 	</configurations>
 
-	<publications>
+	<publications defaultconf="build,deploy">
 		<artifact name="fmk-schema" ext="zip" />
 		<artifact name="fmk-schema-idws" ext="zip" />
         <artifact name="NamespaceOracle-generated" ext="properties" />
@@ -19,7 +19,8 @@
 	<dependencies>
 		<dependency org="commons-io" name="commons-io" rev="1.4" />
         <dependency org="log4j" name="log4j" rev="1.2.14" transitive="false" conf="build,deploy->default"/>
-		<dependency org="dk.sosi.seal" name="seal" rev="2.1.6">
+		<!-- <dependency org="dk.sosi.seal" name="seal" rev="2.1.6"> -->
+		<dependency org="dk.sosi.seal" name="seal" rev="2.2.1-SNAPSHOT">
 			<exclude org="axis" />
 		</dependency>
         <dependency org="org.apache.ws.security" name="wss4j" rev="1.5.12" >
