Seal 2.2.1 arrived in the release repository - removed dependency to SNAPSHOT version

--- a/ivy.xml
+++ b/ivy.xml
@@ -20,7 +20,7 @@
 		<dependency org="commons-io" name="commons-io" rev="1.4" />
         <dependency org="log4j" name="log4j" rev="1.2.14" transitive="false" conf="build,deploy->default"/>
 		<!-- <dependency org="dk.sosi.seal" name="seal" rev="2.1.6"> -->
-		<dependency org="dk.sosi.seal" name="seal" rev="2.2.1-SNAPSHOT">
+		<dependency org="dk.sosi.seal" name="seal" rev="2.2.1">
 			<exclude org="axis" />
 		</dependency>
         <dependency org="org.apache.ws.security" name="wss4j" rev="1.5.12" >
